force-app/main/default/objects/OrderItem__c/OrderItem__c.object-meta.xml
<CustomObject>
    <description>A line item on an Order__c. Master-detail child of Order__c.</description>
    <label>Order Item</label>
    <nameField>
        <label>Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>