force-app/main/default/objects/OrderItem__c/fields/IsReturnable__c.field-meta.xml
<CustomField>
    <fullName>IsReturnable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Returnable</label>
    <type>Checkbox</type>
</CustomField>